kube/lab-resources/podRbac.yaml
# podRbac.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: lab
spec:
  serviceAccountName: restricted-sa  # Associe le SA
  containers:
  - name: main
    image: alpine
    command: ["sleep", "3600"]
